--- a/amazon_clone/ama.css
+++ b/amazon_clone/ama.css
@@ -82,18 +82,34 @@ border: none;
  }
  /* box4 */
  .language{
-    width: 45px;
     display: flex;
-    justify-content: space-evenly;
-
+    width: 120px;
+    height: 30px;
+    border-radius: 4px;
+ }
+ 
+ .select-lang{
+    background-color: #f3f3f3;
+    width: 50px;
+    text-align: center;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border: none;
+    margin-left: 2px;
+ }
+ .flag{
+    height: 30px;
+    width: 30px;
+    background-image: url("india-flag.png");
+    background-size:contain ;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
 
  }
- /* .flag{
-    height: 30px;
-    width: 100%;
-    background-image: url("india-flag.png");
-    background-size:cover ;
- } */
+ 
  span{
     font-size: 12px;
 
