--- a/amazon_clone/ama.css
+++ b/amazon_clone/ama.css
@@ -4,7 +4,6 @@
     font-family: Arial, Helvetica, sans-serif;
     border: border-box;
 }
-
 .navbar{
     height: 60px;
     background-color: #0f1111;
@@ -15,7 +14,7 @@
 }
 .nav_logo{
     height: 50px;
-    width: 150px;
+    width: 100px;
 }
 .logo{
     background-image: url("amazon-logo.png");
@@ -63,6 +62,9 @@
     border-bottom-left-radius: 4px;
     border: none;
  }
+ .select-search:hover{
+    background-color: gray;
+ }
  input{
 width: 100%;
 font-size: 1rem;
@@ -80,6 +82,9 @@ border: none;
     border-bottom-right-radius: 4px;
     color: black; 
  }
+ .search-icon:hover{
+    background-color: coral;
+ }
  /* box4 */
  .language{
     display: flex;
@@ -89,9 +94,12 @@ border: none;
  }
  
  .select-lang{
-    background-color: #f3f3f3;
-    width: 50px;
+    background-color: #0f1111;
+    width: 80px;
     text-align: center;
+    color: #f3f3f3;
+    font-size: 0.89rem;
+    font-weight:700;
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
     border: none;
