--- a/amazon_clone/ama.css
+++ b/amazon_clone/ama.css
@@ -204,9 +204,9 @@ border: none;
 }
 .box-img{
     height : 300px;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
-        margin: 1rem 0;
+    margin: 1rem 0;
 }
 .box-content{
     margin-left:10px ;
