--- a/amazon_clone/ama.css
+++ b/amazon_clone/ama.css
@@ -90,7 +90,7 @@ border: none;
     display: flex;
     width: 120px;
     height: 30px;
-    border-radius: 4px;
+    /* border-radius: 4px; */
  }
  
  .select-lang{
