--- a/amazon_clone/ama.css
+++ b/amazon_clone/ama.css
@@ -117,6 +117,10 @@ border: none;
     margin-top: 10px;
 
  }
+ a{
+    color: #f3f3f3;
+    text-decoration: none;
+ }
  
  span{
     font-size: 12px;
@@ -283,4 +287,15 @@ ul a{
 .copyright{
     padding-top: 5px;
     font-size: .7rem;
+}
+
+/* start media query */
+
+@media (max-width:400px) {
+    .panel {
+        height: 40px;
+        background-color: #222f3d;
+        color: white;
+        
+    }
 }
